Bug 62798 - [ilk Bisected]System boot fail with -queued kernel
Summary: [ilk Bisected]System boot fail with -queued kernel
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: high critical
Assignee: Daniel Vetter
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-27 08:39 UTC by lu hua
Modified: 2017-10-06 14:46 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description lu hua 2013-03-27 08:39:37 UTC
System Environment:
--------------------------
Arch:             x86_64
Platform:         Ironlake/Sandybridge/Ivybridge/Haswell
Kernel: (drm-intel-next-queued)4d5f942ed056a2ec66a90a59ebdd639ec8314e55

Bug detailed description:
-------------------------
System hang while booting up. It happens on -queued kernel.It works well on -fixes kernel.

Bisect shows: e5868a318d1ae28f760f77bb91ce5deb751733fd is the first bad commit
commit e5868a318d1ae28f760f77bb91ce5deb751733fd
Author:     Egbert Eich <eich@suse.de>
AuthorDate: Thu Feb 28 04:17:12 2013 -0500
Commit:     Daniel Vetter <daniel.vetter@ffwll.ch>
CommitDate: Tue Mar 26 21:52:19 2013 +0100

    DRM/i915: Convert HPD interrupts to make use of HPD pin assignment in encoders (v2)

    This allows to enable HPD interrupts for individual pins to only receive
    hotplug events from lines which are connected and working.

    v2: Restructured initailization of const arrays following a suggstion
        by Chris Wilson <chris@chris-wilson.co.uk>

    Signed-off-by: Egbert Eich <eich@suse.de>
    Acked-by: Chris Wilson <chris@chris-wilson.co.uk>
    Reviewed-by: Jesse Barnes <jbarnes@virtuousgeek.org> (v1)
    Signed-off-by: Daniel Vetter <daniel.vetter@ffwll.ch>
Comment 1 Daniel Vetter 2013-03-27 10:16:04 UTC
The following patch should fix this:

https://patchwork.kernel.org/patch/2346611/

Can you please test and confirm?
Comment 2 Daniel Vetter 2013-03-27 10:30:23 UTC
Correction platform tag to ilk, but probably all pch-split platforms are affected (i.e. up to hsw).
Comment 3 Daniel Vetter 2013-03-27 15:41:24 UTC
Should be fixed with

commit e16e3e2a6414189059871b73238a2a5ecf2cc086
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Wed Mar 27 15:55:01 2013 +0100

    drm/i915: implement ibx_hpd_irq_setup
Comment 4 lu hua 2013-03-28 02:26:26 UTC
Verified.Fixed.
Comment 5 Gordon Jin 2013-07-03 05:51:36 UTC
(give credit to Daniel)
Comment 6 Elizabeth 2017-10-06 14:46:51 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.